Remove gradients on buttons. They don't work correctly on IE.

--- a/server/ncm/stylesheets/styles.css
+++ b/server/ncm/stylesheets/styles.css
@@ -73,10 +73,6 @@ img {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
 	/* For IE 5.5 - 7 */
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
-
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#996600', endColorstr='#000000'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#996600), to(#000000)); /* for webkit browsers */
-	background: -moz-linear-gradient(top,  #996600,  #000000); /* for firefox 3.6+ */ 
 }
 
 #content { 
